--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@smooth-ui/core-sc": "^10.1.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "sass": "^1.23.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
